--- a/P1Front-deployment.yaml
+++ b/P1Front-deployment.yaml
@@ -1,7 +1,6 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  creationTimestamp: null
   labels:
     app: front
   name: frontend
@@ -10,10 +9,8 @@ spec:
   selector:
     matchLabels:
       app: front
-  strategy: {}
   template:
     metadata:
-      creationTimestamp: null
       labels:
         app: front
     spec:
@@ -21,24 +18,25 @@ spec:
       - image: luisgalvisp/p1_front
         name: front
         ports:
-          - containerPort: 80
-        resources: -
-       requests:
-        memory: "500Mi"
-        cpu: "150m"
-      limits:
-        memory: "1Gi"
-        cpu: "600m"
-        startupProbe: #verificamos que subio
-          httpGet:
-           path: /saludo
-            port: 8080
-            initialDelaySeconds: 30
-            failureThreshold: 3
-              periodSeconds: 5
-        livenessProbe: #verificamos que sigue vivo
+        - containerPort: 80
+        resources:
+          requests:
+            memory: "500Mi"
+            cpu: "150m"
+          limits:
+            memory: "1Gi"
+            cpu: "600m"
+        startupProbe: # Verificamos que subió
           httpGet:
             path: /saludo
-            periodSeconds: 5
+            port: 8080
+          initialDelaySeconds: 30
           failureThreshold: 3
-            periodSeconds: 5
+          periodSeconds: 5
+        livenessProbe: # Verificamos que sigue vivo
+          httpGet:
+            path: /saludo
+            port: 8080
+          initialDelaySeconds: 30
+          periodSeconds: 5
+          failureThreshold: 3
