--- a/P1Front-deployment.yaml
+++ b/P1Front-deployment.yaml
@@ -26,17 +26,17 @@ spec:
           limits:
             memory: "1Gi"
             cpu: "600m"
-        # startupProbe: # Verificamos que subió
-        #   httpGet:
-        #     path: /saludo
-        #     port: 8080
-        #   initialDelaySeconds: 30
-        #   failureThreshold: 3
-        #   periodSeconds: 5
-        # livenessProbe: # Verificamos que sigue vivo
-        #   httpGet:
-        #     path: /saludo
-        #     port: 8080
-        #   initialDelaySeconds: 30
-        #   periodSeconds: 5
-        #   failureThreshold: 3
+        startupProbe: # Verificamos que subió
+          httpGet:
+            path: /saludo
+            port: 8080
+          initialDelaySeconds: 30
+          failureThreshold: 3
+          periodSeconds: 5
+        livenessProbe: # Verificamos que sigue vivo
+          httpGet:
+            path: /saludo
+            port: 8080
+          initialDelaySeconds: 30
+          periodSeconds: 5
+          failureThreshold: 3
