--- a/P1Front-service.yaml
+++ b/P1Front-service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: front-service
 spec:
   selector:
-    app: front
+    app: parcial1-paa
   ports:
     - protocol: TCP
       port: 80
