no se no sirve y no se porque

--- a/P1Front-deployment.yaml
+++ b/P1Front-deployment.yaml
@@ -30,12 +30,14 @@ spec:
             cpu: "600m"
         startupProbe: # Verificamos que subió
           httpGet:
+            path: /
             port: 8080
           initialDelaySeconds: 30
           failureThreshold: 3
           periodSeconds: 5
         livenessProbe: # Verificamos que sigue vivo
           httpGet:
+            path: /
             port: 8080
           initialDelaySeconds: 30
           periodSeconds: 5
